--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp-concat": "~2.4.3",
     "gulp": "~3.8.10",
-    "gulp-sass": "~1.2.4"
+    "gulp-sass": "~1.2.4",
+    "gulp-uglify": "^1.0.2"
   }
 }
